# fungus-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bytes_or_chars.rs  database_rehashing.rs  fingerprint.rs  lexing.rs  radix_sort.s
src/: fingerprint.rs  identity_hash.rs  lexer.rs  lib.rs  main.rs  match_expansion.rs  output.rs  token.rs
src/lexing/: mod.rs  naive.rs  relative.rs
src/lexing/relative/: parser.rs
src/preprocessing/: whitespace_removal.rs
