[package]
name = "manual-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
itertools = "0.10.5"
logos = "0.12.1"
relative-path = "1.8"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"

[[bin]]
name = "fungus"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pretty_assertions = "1.4.0"

[[bench]]
name = "bytes_or_chars"
harness = false

[[bench]]
name = "database_rehashing"
harness = false

[[bench]]
name = "fingerprint"
harness = false

[[bench]]
name = "lexing"
harness = false

# Used by `cargo flamegraph` to get better profiling results.
# [profile.bench]
# debug = true
