[package]
name = "fungus-cli"
version = "1.0.0"
authors = ["Gabriel Lacroix", "Kirollos Roufail", "Louis Hildebrand"]
edition = "2021"
description = "FUNGUS is a tool for detecting similarities between ARMv7 assembly projects, for example, for introductory software assignments."
readme = "README.md"
homepage = "https://github.com/Project-Fungus"
repository = "https://github.com/Project-Fungus/fungus-cli"
license = "MIT"
keywords = ["plagiarism", "copy_detection", "assignments"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
itertools = "0.10.5"
logos = "0.12.1"
relative-path = "1.8"
rustc-hash = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"

[[bin]]
name = "fungus"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pretty_assertions = "1.4.0"
